# declaration-engine-and-collection-context-demo

./: Cargo.toml  README.md
de_cc/: Cargo.toml
de_cc/src/: concurrent_slab.rs  lib.rs
de_cc/src/collection_context/: bfs.rs  collection_context.rs  collection_edge.rs  collection_index.rs  collection_node.rs  graph_edge.rs  graph_node.rs  mod.rs
de_cc/src/collection_context/graph/: direction.rs  edge.rs  graph.rs  mod.rs  neighbors.rs  node.rs  visit_map.rs
de_cc/src/declaration_engine/: declaration_engine.rs  declaration_id.rs  declaration_wrapper.rs  mod.rs
de_cc/src/language/: mod.rs  semi.rs
de_cc/src/language/_partial/: mod.rs  partial_declaration.rs
de_cc/src/language/_typing_context/: function.rs
de_cc/src/language/parsed/: declaration.rs  expression.rs
de_cc/src/language/partial/: mod.rs  partial_declaration.rs
de_cc/src/language/resolved/: resolved_declaration.rs
de_cc/src/language/semi/: mod.rs  semi_declaration.rs
de_cc/src/language/ty/: mod.rs  typed_declaration.rs  typed_expression.rs
de_cc/src/namespace/: collection_namespace.rs  function_signature.rs  mod.rs  namespace.rs  path.rs
de_cc/src/semantic_analysis/: collect.rs  collection.rs  mod.rs  type_collection.rs
de_cc/src/type_system/: mod.rs  resolved_types.rs  type_argument.rs  type_engine.rs  type_id.rs  type_info.rs  type_mapping.rs  type_parameter.rs
de_cc/src/types/: copy_types.rs  mod.rs  pretty_print.rs  with_collection_context.rs
de_cc/tests/: harness.rs  helpers.rs
de_cc_macros/: Cargo.toml
de_cc_macros/src/: debug.rs  lib.rs  partial_eq.rs  with_cc.rs
(+168 files in other folders)
