[package]
name = "de_cc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
linked-hash-map = "0.5.6"
colored = "2.0.0"
indent_write = "2.2.0"
either = "1.8.0"
petgraph = "0.6.2"
#de_cc_macros = { path = "../de_cc_macros" }
